force-app/main/default/objects/Activity/fields/Contributed_Value__c.field-meta.xml
<CustomField>
    <fullName>Contributed_Value__c</fullName>
    <label>Contributed_Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>