force-app/main/default/objects/Activity/fields/Is_Internal_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Internal_Task</label>
    <type>Checkbox</type>
</CustomField>